UC18: Add Google OAuth2 login and JWT bearer-token authentication for all REST endpoints